@@ -13,6 +13,10 @@ require 'mkmf-gnome2'
 PKGConfig.have_package('libgtkhtml-2.0') or exit 1
 check_win32
 
+have_func('html_box_block_get_containing_width')
+have_func('html_box_embedded_new')
+have_func('html_box_table_get_top_offset')
+have_func('html_box_table_get_bottom_offset')
 #have_func('gnome_canvas_set_center_scroll_region')
 
 top = File.expand_path(File.dirname(__FILE__) + '/..') # XXX
